# whh_model_fitting

./: .gitignore  LICENSE  README.md  kim_data.csv  kim_meta.csv  pyproject.toml  series_consistency.ipynb  whh.py  whh_model.ipynb
