[project]
name = "whh-model-fitting"
version = "0.1.0"
description = "public version, downstream"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "mpmath>=1.4.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
]
